--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "react": "^0.14 || ^15"
   },
   "devDependencies": {
+    "cf-react-component-template": "0.1.8",
     "react-component-template": "0.1.8",
-    "cf-react-component-template": "0.1.8"
+    "react-highlight.js": "1.0.5"
   },
   "dependencies": {
     "jquery": "3.2.1",
