--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-free-carousel",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Carousel component for free flex-box layout built with React.",
   "main": "lib/index.js",
   "config": {
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "jquery": "3.2.1",
-    "lodash": "4.17.4"
+    "lodash.capitalize": "4.2.1",
+    "lodash.debounce": "4.0.8"
   }
 }
