--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-free-carousel",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Carousel component for free flex-box layout built with React.",
   "main": "lib/index.js",
   "config": {
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "lodash.capitalize": "4.2.1",
-    "lodash.debounce": "4.0.8"
+    "lodash.debounce": "4.0.8",
+    "styled-components": "2.1.1"
   }
 }
